
New updates are grouped by person (committer/merger), at the top of the file.
All entries are dated according to merging into the code in dev branch. THIS MEANS THE CODE MAY
NOT BE PRESENT IN THE STABLE BRANCH
For details of when a commit makes it into the stable branch see the ReleaseNotes file.

2016-05-12 niel
	Add: Reporting oupt for update git,db commands.
2016-05-12 ruhllatio
	Fix: Browse ordering wrong due to added minSize push
	Mrg: PR Add leftguid column to releases to improve threading work queries #2144
	Chg: Improve fixRelNames work queries
2016-05-12 DariusIII
	* Fix: Remove derefferer links from CouchPotato url in Gamma theme.
2016-05-11 bart39
	Fix: fix patch 438 / schema.
	Chg: Added some logging to help diagnose issue #2139
	Chg: detect broken nzbs in clean nzbs.
	Chg: add method for rarinfo if missing.
2016-05-11 ruhllatio
	Chg: Make some var changes in PP Add
	Fix: fix patch 438 missing trigger updates for release search table
	Fix: Invalid index errors in NameFixer caused by bad find and replaces in feature-db (temp)
	Fix: PP Add query using old releaseid
	Add: Feature request - Option to specify the minimum file size using the API? #234
	Fix: Undefined index: anidb #2137
	Add: REQUEST: include PREDBURL (if PREDB info exists) in extended=1 API information #2035
	Chg: Make deleteSingle honor the release ID identifier as a PK delete will always be faster
	Chg: Make fixRelNames filename work query a bit quicker on larger databases by preserving table placement
2016-05-11 DariusIII
	Upd: Split UPDATE and DELETE query after NZB is created for release
	Fix: Remove argument from createGUID function call in createReleases function, as createGUID function does not use any argument.
2016-05-10 ruhllatio
	Fix: Category Parent->Child name return function after Misc move
	Fix: WEB-DL shows as option in My TV shows when not used as a category #2110
	Fix: 404 function had no parameter for reason even though it was being set and clean up BasePage