@@ -12,15 +12,19 @@ use nzedb\utility\Misc;
 class TmuxOutput extends Tmux
 {
 	/**
-	 * @var \nzedb\utility\Git
-	 */
-//	protected $_git;
-
-	/**
 	 * @var \nzedb\utility\Versions
 	 */
 	protected $_vers;
 
+
+	/**
+	 * @var array Different colour masks settings used by Tmux display functions
+	 */
+	protected $_colourMasks;
+
+	/**
+	 * @var array The various Tmux runtime configuration variables
+	 */
 	private $runVar;
 
 	/**
@@ -35,7 +39,6 @@ class TmuxOutput extends Tmux
 	public function __construct(Settings $pdo = null)
 	{
 		parent::__construct($pdo);
-//		$this->_git = new \nzedb\utility\Git(); // Do not remove the full namespace/ PHP gets confused for some reason without it.
 		$this->_vers = Misc::getValidVersionsFile();
 
 		$this->_setColourMasks();
@@ -101,7 +104,7 @@ class TmuxOutput extends Tmux
 
 	protected function _getFormatMasks($compressed)
 	{
-		$index = $compressed == 1 ? 2.1 : 2.0;
+		$index = ($compressed == 1 ? '2.1' : '2.0');
 		return [
 			1 => &$this->_colourMasks[1],
 			2 => &$this->_colourMasks[$index],
@@ -493,13 +496,13 @@ class TmuxOutput extends Tmux
 		return $buffer;
 	}
 
-	protected function _SetColourMasks()
+	protected function _setColourMasks()
 	{
 		$this->_colourMasks[1]   =
 			$this->pdo->log->headerOver("%-18s") . " " . $this->pdo->log->tmuxOrange("%-48.48s");
-		$this->_colourMasks[2.0] =
+		$this->_colourMasks['2.0'] =
 			$this->pdo->log->alternateOver("%-20s") . " " . $this->pdo->log->tmuxOrange("%-33.33s");
-		$this->_colourMasks[2.1] =
+		$this->_colourMasks['2.1'] =
 			$this->pdo->log->headerOver("%-20s") . " " . $this->pdo->log->tmuxOrange("%-33.33s");
 		$this->_colourMasks[3]   = $this->pdo->log->header("%-16.16s %25.25s %25.25s");
 		$this->_colourMasks[4] = $this->pdo->log->primaryOver("%-16.16s") .
